Apply: add-remote-parallel-control
